# map

./: .env.example  .gitignore  CLAUDE.md  CODESPACES.md  DEPLOYMENT.md  PRIVACY.md  README.md  ROADMAP.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: api-reviewer.md  docs-maintainer.md  frontend-qa.md  security-checker.md
.claude/hooks/: scope-guard.sh  secret-scrub.sh  test-gate.sh
.devcontainer/: bootstrap-env.sh  devcontainer.json  start.sh
.githooks/: post-merge  pre-commit  pre-push
.github/workflows/: apisec-scan.yml  codeql.yml  devskim.yml  docker-publish.yml  ethicalcheck.yml  frontend.yml  gateway.yml  ios-build.yml  python-api.yml  repo-health.yml  web-pwa.yml
apps/api/rust/gateway/: Cargo.toml  Dockerfile
apps/api/rust/gateway/src/: main.rs
apps/api/rust/gateway/src/handlers/: geocode.rs  health.rs  mod.rs
apps/api/rust/gateway/src/middleware/: bot_detection.rs  mod.rs
apps/gateway/: .env.example  Cargo.toml  Dockerfile
apps/gateway/migrations/: 0001_init.sql  0002_phase2.sql  0003_entity_resolution.sql  0004_entities_idempotency.sql  0005_retrieved_at_index.sql  0006_geography_index.sql  0007_alerts.sql  0008_agent_swarm.sql  0009_project_architect.sql  0010_entity_boundaries.sql  0011_agent_change_proposals.sql  0012_coordinator_race_guard.sql  0013_seed_demo_data.sql
apps/gateway/src/: config.rs  db.rs  error.rs  main.rs  state.rs
apps/gateway/src/middleware/: auth.rs  rate_limit.rs
apps/gateway/src/routes/: alerts_ws.rs  boundaries.rs  entities.rs  geocode.rs  health.rs  health_streaming.rs  mod.rs  research.rs  search.rs  subscriptions.rs
scripts/: maintenance.sh  repo_health_check.py
streaming/: README.md
(+169 files in other folders)
