[package]
name = "aether-gateway"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7", features = ["json", "query"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
governor = "0.7"
nonzero_ext = "0.3"
jsonwebtoken = "9"
thiserror = "1"
dotenvy = "0.15"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
